--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,86 +12,277 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Welcome"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="26sp" />
+            android:layout_height="?attr/actionBarSize"
+            android:layout_gravity="right"
+            app:title="Triumph"
+            app:titleTextColor="@color/black"
+            app:menu="@menu/menu"
+            app:navigationIconTint="@color/black"
+            />
 
-        <TextView
-            android:id="@+id/user_email"
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Example"
-            android:textColor="@color/black"
-            android:textStyle="italic"
-            android:textSize="26sp" />
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/user_displayName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Example"
-            android:textColor="@color/black"
-            android:textStyle="italic"
-            android:textSize="26sp" />
+            <ListView
+                android:id="@+id/list_kanban"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                tools:listitem="@layout/custom_kanban_project"
+                />
 
-        <TextView
-            android:id="@+id/user_givenName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Example"
-            android:textColor="@color/black"
-            android:textStyle="italic"
-            android:textSize="26sp" />
+            <FrameLayout
+                android:id="@+id/bottom_sheet"
+                android:layout_width="match_parent"
+                android:layout_height="600dp"
+                android:visibility="visible"
+                app:layout_behavior="@string/bottom_sheet_behavior"
+                android:background="@drawable/rounded">
 
-        <TextView
-            android:id="@+id/user_familyName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Example"
-            android:textColor="@color/black"
-            android:textStyle="italic"
-            android:textSize="26sp" />
+                <ImageView
+                    android:layout_width="70dp"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_baseline_remove_24"
+                    android:scaleType="centerCrop"
+                    android:layout_gravity="center|top"/>
 
-        <TextView
-            android:id="@+id/user_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Example"
-            android:textColor="@color/black"
-            android:textStyle="italic"
-            android:textSize="26sp" />
+                <LinearLayout
+                    android:id="@+id/linearlayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:padding="20dp">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/profilePic"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_launcher_background"
-            android:layout_marginTop="20dp"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:weightSum="2">
 
-        <TextView
-            android:id="@+id/signOut"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:gravity="center"
-            android:text="@string/signOut"
-            android:textColor="@color/blue"
-            android:textStyle="bold"
-            android:textSize="26sp" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Kanban"
+                            android:textColor="@color/white"
+                            android:textSize="26sp"
+                            android:textStyle="bold"
+                            android:gravity="start"
+                            android:layout_weight="1" />
+
+                        <ImageView
+                            android:id="@+id/kanban_save"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:scaleType="fitEnd"
+                            android:src="@drawable/ic_baseline_save_24" />
+
+                    </LinearLayout>
+
+                    <EditText
+                        android:id="@+id/kanban_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:background="@drawable/custom_edittext_kanban"
+                        android:drawableStart="@drawable/ic_baseline_title_24"
+                        android:drawablePadding="12dp"
+                        android:hint="Title"
+                        android:textColor="@color/white"
+                        android:textColorHint="@color/white"
+                        android:paddingStart="12dp"
+                        android:paddingEnd="12dp"
+                        android:layout_marginTop="20dp"/>
+
+                    <EditText
+                        android:id="@+id/kanban_description"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textMultiLine"
+                        android:background="@drawable/custom_edittext_kanban"
+                        android:drawableStart="@drawable/ic_baseline_description_24"
+                        android:drawablePadding="12dp"
+                        android:hint="Description"
+                        android:textColor="@color/white"
+                        android:textColorHint="@color/white"
+                        android:paddingTop="15dp"
+                        android:paddingBottom="15dp"
+                        android:paddingStart="12dp"
+                        android:paddingEnd="12dp"
+                        android:layout_marginTop="20dp"/>
+
+                    <EditText
+                        android:id="@+id/kanban_search"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textMultiLine"
+                        android:background="@drawable/custom_edittext_kanban"
+                        android:drawableStart="@drawable/ic_baseline_search_24"
+                        android:drawablePadding="12dp"
+                        android:hint="Search Members"
+                        android:textColor="@color/white"
+                        android:textColorHint="@color/white"
+                        android:paddingTop="15dp"
+                        android:paddingBottom="15dp"
+                        android:paddingStart="12dp"
+                        android:paddingEnd="12dp"
+                        android:layout_marginTop="20dp"/>
+
+                    <ListView
+                        android:id="@+id/listview"
+                        android:layout_marginTop="16dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:divider="@color/black"
+                        tools:listitem="@layout/custom_triumph_member"
+                        android:background="@color/black"
+                        android:scrollbars="vertical"/>
+
+<!--                    <LinearLayout-->
+<!--                        android:layout_width="fill_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:showDividers="middle"-->
+<!--                        android:divider="@drawable/divider"-->
+<!--                        android:weightSum="2">-->
+
+<!--                        <EditText-->
+<!--                            android:id="@+id/kanban_due_date"-->
+<!--                            android:layout_width="0dp"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_weight="1"-->
+<!--                            android:inputType="date"-->
+<!--                            android:background="@drawable/custom_edittext_kanban"-->
+<!--                            android:drawableStart="@drawable/ic_baseline_calendar_month_24"-->
+<!--                            android:drawablePadding="12dp"-->
+<!--                            android:hint="Due Date"-->
+<!--                            android:textColor="@color/white"-->
+<!--                            android:textColorHint="@color/white"-->
+<!--                            android:paddingTop="15dp"-->
+<!--                            android:paddingBottom="15dp"-->
+<!--                            android:paddingStart="12dp"-->
+<!--                            android:paddingEnd="12dp"-->
+<!--                            android:layout_marginTop="20dp"/>-->
+
+<!--                        <EditText-->
+<!--                            android:id="@+id/kanban_date_delivered"-->
+<!--                            android:layout_width="0dp"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_weight="1"-->
+<!--                            android:inputType="textMultiLine"-->
+<!--                            android:background="@drawable/custom_edittext_kanban"-->
+<!--                            android:drawableStart="@drawable/ic_baseline_calendar_month_24"-->
+<!--                            android:drawablePadding="12dp"-->
+<!--                            android:hint="Completed"-->
+<!--                            android:textColor="@color/white"-->
+<!--                            android:textColorHint="@color/white"-->
+<!--                            android:paddingTop="15dp"-->
+<!--                            android:paddingBottom="15dp"-->
+<!--                            android:paddingStart="12dp"-->
+<!--                            android:paddingEnd="12dp"-->
+<!--                            android:layout_marginTop="20dp"/>-->
+
+<!--                    </LinearLayout>-->
+
+                </LinearLayout>
+
+            </FrameLayout>
+
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
+
+<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:src="@drawable/ic_baseline_add_24"-->
+<!--            android:backgroundTint="@color/yellow"-->
+<!--            android:layout_marginBottom="10dp" />-->
+
 
     </LinearLayout>
 
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!--        <TextView-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:gravity="center"-->
+    <!--            android:text="Welcome"-->
+    <!--            android:textColor="@color/black"-->
+    <!--            android:textStyle="bold"-->
+    <!--            android:textSize="26sp" />-->
+
+    <!--        <TextView-->
+    <!--            android:id="@+id/user_email"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:gravity="center"-->
+    <!--            android:text="Example"-->
+    <!--            android:textColor="@color/black"-->
+    <!--            android:textStyle="italic"-->
+    <!--            android:textSize="26sp" />-->
+
+    <!--        <TextView-->
+    <!--            android:id="@+id/user_displayName"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:gravity="center"-->
+    <!--            android:text="Example"-->
+    <!--            android:textColor="@color/black"-->
+    <!--            android:textStyle="italic"-->
+    <!--            android:textSize="26sp" />-->
+
+    <!--        <TextView-->
+    <!--            android:id="@+id/user_givenName"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:gravity="center"-->
+    <!--            android:text="Example"-->
+    <!--            android:textColor="@color/black"-->
+    <!--            android:textStyle="italic"-->
+    <!--            android:textSize="26sp" />-->
+
+    <!--        <TextView-->
+    <!--            android:id="@+id/user_familyName"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:gravity="center"-->
+    <!--            android:text="Example"-->
+    <!--            android:textColor="@color/black"-->
+    <!--            android:textStyle="italic"-->
+    <!--            android:textSize="26sp" />-->
+
+    <!--        <TextView-->
+    <!--            android:id="@+id/user_id"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:gravity="center"-->
+    <!--            android:text="Example"-->
+    <!--            android:textColor="@color/black"-->
+    <!--            android:textStyle="italic"-->
+    <!--            android:textSize="26sp" />-->
+
+    <!--        <de.hdodenhof.circleimageview.CircleImageView-->
+    <!--            android:id="@+id/profilePic"-->
+    <!--            android:layout_width="80dp"-->
+    <!--            android:layout_height="80dp"-->
+    <!--            android:layout_gravity="center"-->
+    <!--            android:src="@drawable/ic_launcher_background"-->
+    <!--            android:layout_marginTop="20dp"/>-->
+
+    <!--        <TextView-->
+    <!--            android:id="@+id/signOut"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_marginTop="50dp"-->
+    <!--            android:gravity="center"-->
+    <!--            android:text="@string/signOut"-->
+    <!--            android:textColor="@color/blue"-->
+    <!--            android:textStyle="bold"-->
+    <!--            android:textSize="26sp" />-->
