--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="white">#FFFFFF</color>
     <color name="blue">#FF2196F3</color>
     <color name="green">#FF8BC34A</color>
+    <color name="red">#FF0000</color>
+    <color name="yellow">#e6b400</color>
+    <color name="grey">#BEBEBE</color>
 </resources>
