Working Tables. Current update: Popup

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="red">#FF0000</color>
     <color name="yellow">#e6b400</color>
     <color name="grey">#BEBEBE</color>
+    <color name="darkBlue">#145DA0</color>
 </resources>
