--- a/app/src/main/res/layout/activity_chart.xml
+++ b/app/src/main/res/layout/activity_chart.xml
@@ -86,10 +86,8 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="4"
-                            android:gravity="center"
-                            android:text="To Do"
-                            android:textColor="@color/black"
-                            android:textSize="14sp" />
+                            tools:listitem="@layout/custom_task_list"
+                            />
 
                         <ListView
                             android:id="@+id/list_doing"
