--- a/app/src/main/res/layout/custom_task_list.xml
+++ b/app/src/main/res/layout/custom_task_list.xml
@@ -8,22 +8,22 @@
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp">
+        android:layout_margin="5dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/task_person_image"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:src="@drawable/ic_launcher_background" />
 
         <TextView
             android:id="@+id/task_person_creator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_marginLeft="5dp"
             android:layout_toRightOf="@+id/task_person_image"
             android:text="Marlon Miller"
-            android:textSize="16sp"
+            android:textSize="8sp"
             android:textStyle="bold"
             android:textColor="@color/black"/>
 
@@ -36,6 +36,7 @@
             android:layout_marginLeft="5dp"
             android:text="Created: 1/5/2023"
             android:textColor="@color/black"
+            android:textSize="6sp"
             android:textStyle="italic" />
 
         <TextView
@@ -45,7 +46,8 @@
             android:layout_below="@+id/task_date_created"
             android:layout_toRightOf="@+id/task_person_image"
             android:layout_marginLeft="5dp"
-            android:text="Modified by: Elsy Regina on 1/6/2023"
+            android:text="Modified: Elsy Regina, 1/6/2023"
+            android:textSize="6sp"
             android:textStyle="italic"
             android:textColor="@color/black"/>
 
@@ -56,7 +58,7 @@
             android:layout_margin="5dp"
             android:layout_alignParentRight="true"
             android:text="9:00 AM"
-            android:textSize="16sp"
+            android:textSize="6sp"
             android:textStyle="normal"
             android:textColor="@color/black"/>
 
@@ -70,9 +72,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="5dp"
             android:text="Comprar Pan"
-            android:textSize="26sp"
+            android:textSize="13sp"
             android:textStyle="bold" />
 
         <View
@@ -84,10 +86,10 @@
             android:id="@+id/task_priority"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:layout_gravity="right"
+            android:layout_marginRight="5dp"
+            android:layout_gravity="right|center"
             android:text="Important"
-            android:textSize="15sp"
+            android:textSize="8sp"
             android:textStyle="italic" />
 
     </LinearLayout>
@@ -95,40 +97,27 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="5dp"
+        android:textSize="8sp"
         android:text="Martha came to the conclusion that shake weights are a great gift for any occasion."
         />
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/task_due_date"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_gravity="center"
+        android:textSize="8sp"
+        android:text="Due: 1/5/2023"
+        android:textStyle="bold|italic"/>
 
-        <TextView
-            android:id="@+id/task_due_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginBottom="10dp"
-            android:text="Due: 1/5/2023"
-            android:textStyle="bold|italic"/>
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-
-        <TextView
-            android:id="@+id/task_date_completed"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="10dp"
-            android:text="Completed: 1/6/2023"
-            android:textSize="15sp"
-            android:textStyle="bold|italic" />
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/task_date_completed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Completed: 1/6/2023"
+        android:textSize="8sp"
+        android:textStyle="bold|italic" />
 
 </LinearLayout>
